feat: Enhance Map Features with Geolocation, Zoom Slider, and UI Adjustments
- Implement Geolocation API to display the user's current location on the map.
- Replace traditional zoom buttons with a zoom slider (gauge) for map magnification/reduction.
- Reposition the 'My Location Info' panel to the left side of the map for improved layout.

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,8 @@
     -->
 
     <!-- 카카오 지도 JavaScript SDK 추가 -->
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAO_MAPS_API_KEY%"></script>
+     <script type="text/javascript" src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAO_MAPS_API_KEY%&autoload=false"></script>
+    <!--&autoload=false: 개발자가 원하는 시점에 window.kakao.maps.load() 함수 호출시켜 수동으로 로드-->
 
     
   </body>
